--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Aakash Solanki's Personal Website
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
+CV: /assets/files/Aakash_Solanki_CV.pdf
