--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Aakash Solanki's Personal Website
+title: Aakash Solanki
+description: Doctoral Researcher at University of Toronto
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
 cv: /assets/files/Aakash_Solanki_CV.pdf
