--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ description: Doctoral Researcher at University of Toronto
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
 cv: /assets/files/Aakash_Solanki_CV.pdf
+permalink: /blog/:year/:month/:day/:title
