--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Aakash Solanki
-description: Doctoral Researcher at University of Toronto
+description: PhD Candidate in Anthropology and South Asian Studies at University of Toronto
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
 cv: /assets/files/Aakash_Solanki_CV.pdf
