--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Aakash Solanki
 description: PhD Candidate in Anthropology and South Asian Studies at University of Toronto
 logo: /assets/img/logo.jpg
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal 
 cv: /assets/files/Aakash_Solanki_CV.pdf
 permalink: /blog/:year/:month/:day/:title
 font: /assets/font/Noto-Sans-regular
+theme: minimal-mistakes-jekyll
