--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,7 @@ logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal 
 cv: /assets/files/Aakash_Solanki_CV.pdf
 permalink: /blog/:year/:month/:day/:title 
-permalink: /:tags/:title/
+collections:
+  tags:
+    output: true
+    permalink: tags/:path/
