--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false #true
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -96,7 +96,7 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: Y0LLLUMAAAAJ # your Google Scholar ID qc6CJjYAAAAJ
+scholar_userid: # your Google Scholar ID qc6CJjYAAAAJ Y0LLLUMAAAAJ
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
@@ -108,7 +108,7 @@ whatsapp_number: # your WhatsApp number (full phone number in international form
 wikidata_id: # your wikidata id
 wikipedia_id: # your wikipedia id (Case sensitive)
 work_url: https://utsc.utoronto.ca/anthropology/aakash-solanki # work page URL
-x_username: theplaa # your X handle
+x_username: # your X handle theplaa
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
