--- a/_config.yml
+++ b/_config.yml
@@ -313,10 +313,10 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Solanki]
+  first_name: [Aakash]
 
-  style: apa
+  style: chicago # apa
   locale: en
 
   source: /_bibliography/
