--- a/_config.yml
+++ b/_config.yml
@@ -316,7 +316,7 @@ scholar:
   last_name: [Solanki]
   first_name: [Aakash]
 
-  style: chicago # apa
+  style: apa #chicago
   locale: en
 
   source: /_bibliography/
