--- a/_config.yml
+++ b/_config.yml
@@ -90,13 +90,13 @@ lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 linkedin_username: # your LinkedIn user name solankiaakash
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: # your Medium username
-orcid_id: 0000-0002-4879-6998 # your ORCID ID
+orcid_id: # your ORCID ID 0000-0002-4879-6998 
 osf_id: # your OSF ID
 pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: # your Google Scholar ID qc6CJjYAAAAJ Y0LLLUMAAAAJ
+scholar_userid: qyhmnyLat1gC # your Google Scholar ID qc6CJjYAAAAJ Y0LLLUMAAAAJ
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
