--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: qyhmnyLat1gC # your Google Scholar ID qc6CJjYAAAAJ Y0LLLUMAAAAJ
+scholar_userid: Y0LLLUMAAAAJ # your Google Scholar ID 
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
