--- a/_config.yml
+++ b/_config.yml
@@ -244,6 +244,9 @@ exclude:
   - package.json
   - package-lock.json
   - _pages/about_einstein.md
+  - _pages/cv.md
+  - _pages/teaching.md
+  - _pages/blog.md
   - purgecss.config.js
   - README.md
   - readme_preview/
