--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,100 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Name
+      value: Aakash Solanki
+    - name: Email
+      value: aakash.solanki@utoronto.ca
+    - name: Website
+      value: https://aakashsolanki.net
+    - name: Research Areas
+      value: Anthropology of the state; digital governance; data infrastructures; critical data studies
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD, Anthropology & South Asian Studies
+      institution: University of Toronto, Toronto, Canada
+      year: 2019 – present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Dissertation traces the colonial and postcolonial genealogies of statistical infrastructures in India.
+        - Methods span multi-sited ethnography, archival research, and collaborative digital humanities projects.
 
-- title: Experience
+- title: Research Projects
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: The State's Ledgers
+      institution: University of Toronto
+      year: 2022 – present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Dissertation project following the material life of ledgers, punch cards, and databases in Indian bureaucracies.
+        - Documents how classificatory schemes migrate between colonial archives and contemporary digital governance pilots.
+    - title: Civic Data Clinics
+      institution: Comparative analysis across U.S. and Indian public agencies
+      year: 2016 – 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Co-designed analytics toolkits to support equitable allocation decisions in education, health, and workforce programs.
+        - Built training modules that paired statistical modelling with qualitative stakeholder mapping for public servants.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Professional Experience
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Data & Evidence Consultant (Education Technology)
+      institution: Department of School Education, Government of Haryana, India
+      year: 2014 – 2016
+      description:
+        - Led ethnographic assessments that informed state-wide management information system deployments.
+        - Designed digital literacy workshops that increased adoption of new reporting workflows by frontline staff.
+    - title: Senior Data Scientist (Public Sector Innovation)
+      institution: Cross-jurisdictional government partnerships, United States & India
+      year: 2016 – 2019
+      description:
+        - Directed interdisciplinary teams delivering analytics products for municipal, state, and federal agencies.
+        - Embedded qualitative fieldwork protocols into predictive models to account for ethical and contextual risks.
 
-- title: Honors and Awards
+- title: Grants & Fellowships
   type: time_table
   contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: Doctoral Research Award
+      institution: International Development Research Centre (IDRC)
+      year: 2023 – 2025
+      description:
+        - Supports archival and ethnographic fieldwork on data infrastructures and social protection in India.
+    - title: Dissertation Fieldwork Grant
+      institution: Wenner-Gren Foundation for Anthropological Research
+      year: 2022 – 2024
+      description:
+        - Funds multi-sited research on bureaucratic classification, enumeration, and accountability technologies.
 
-- title: Academic Interests
+- title: Publications & Public Writing
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Peer-reviewed scholarship
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - '"Management of Performance and Performance of Management: Getting to Work On Time in the Indian bureaucracy," *South Asia: Journal of South Asian Studies* 42(3), 2019.'
+        - '"#GoingEthno in the Indian Bureaucracy," *Proceedings of Ethnographic Praxis in Industry Conference*, 2016 (with Sarvesh Tewari).'
+    - title: Public anthropology
       items:
-        - Description 1.
-        - Description 2.
+        - '"Suddenly, Statistics?" *Cultural Anthropology* Fieldsights, 2018.'
+        - '"Untidy Data: Spreadsheet practices in the Indian Bureaucracy," in *Lives of Data: Essays on Computational Cultures from India*, Institute of Network Cultures, 2020.'
 
-- title: Other Interests
+- title: Teaching & Mentorship
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Graduate instructor and teaching assistant for courses on ethnographic methods, data ethnographies, and the anthropology of the state at the University of Toronto.
+    - Mentor for interdisciplinary workshops on qualitative approaches to algorithmic accountability for public servants and graduate researchers.
+
+- title: Service & Leadership
+  type: list
+  contents:
+    - Contributing Editor, *Cultural Anthropology* (Fieldsights).
+    - Convenor, Development Seminar Series, University of Toronto.
+    - Organizer, collaborative reading group on South Asian data infrastructures across UTSC and Munk School communities.
+
+- title: Research & Technical Skills
+  type: list
+  contents:
+    - Archival research, oral history, and long-form ethnography.
+    - Quantitative analysis in R, Python, and SQL with emphasis on transparent, reproducible workflows.
+    - Data visualization and storytelling for public sector audiences.
+    - Languages: English, Hindi.
